--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,9 +12,10 @@ dependencies:
 
   cupertino_icons: ^0.1.2
 
-  http: ^0.12.0+4
-  google_sign_in: ^4.1.1
+  date_format: ^1.0.8
   flutter_signin_button: ^1.0.0
+  google_sign_in: ^4.1.1
+  http: ^0.12.0+4
 
 dev_dependencies:
   flutter_test:
