--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   flutter_signin_button: ^1.0.0
   google_sign_in: ^4.1.1
   http: ^0.12.0+4
+  modal_progress_hud: ^0.1.3
 
 dev_dependencies:
   flutter_test:
