--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,7 +13,7 @@ dependencies:
   cupertino_icons: ^0.1.2
 
   date_format: ^1.0.8
-  flutter_signin_button: ^1.0.0
+  flutter_auth_buttons: ^0.6.0
   google_sign_in: ^4.1.1
   http: ^0.12.0+4
   modal_progress_hud: ^0.1.3
