--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   cupertino_icons: ^0.1.2
 
   date_format: ^1.0.8
+  email_validator: ^1.0.4
   flutter_auth_buttons: ^0.6.0
   google_sign_in: ^4.1.1
   http: ^0.12.0+4
