Change package name

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: booster_signups
+name: bcp_booster
 description: An app to log signups for Bellarmine College Prep&#x27;s Booster Club
 
 version: 1.0.0+1
