Create new project with web support

--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -3,9 +3,9 @@
 <plist version="1.0">
 <dict>
 	<key>CLIENT_ID</key>
-	<string>707347012167-ej2igshdjk4bekob8rkjubplv6ma3rnn.apps.googleusercontent.com</string>
+	<string>707347012167-4omsp6ud81jjmiqjjb0r26kbh0c4u3oc.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.707347012167-ej2igshdjk4bekob8rkjubplv6ma3rnn</string>
+	<string>com.googleusercontent.apps.707347012167-4omsp6ud81jjmiqjjb0r26kbh0c4u3oc</string>
 	<key>API_KEY</key>
 	<string>AIzaSyBBwe1OSjwyYL0xc-mqObYbT6rYJVieSAs</string>
 	<key>GCM_SENDER_ID</key>
@@ -19,17 +19,17 @@
 	<key>STORAGE_BUCKET</key>
 	<string>booster-signups.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
-	<false/>
+	<false></false>
 	<key>IS_ANALYTICS_ENABLED</key>
-	<false/>
+	<false></false>
 	<key>IS_APPINVITE_ENABLED</key>
-	<true/>
+	<true></true>
 	<key>IS_GCM_ENABLED</key>
-	<true/>
+	<true></true>
 	<key>IS_SIGNIN_ENABLED</key>
-	<true/>
+	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:707347012167:ios:95a54ea3e863e61f10af62</string>
+	<string>1:707347012167:ios:2747c385a5dc462c10af62</string>
 	<key>DATABASE_URL</key>
 	<string>https://booster-signups.firebaseio.com</string>
 </dict>
