Edit manifest and remove print statement

--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "bcpbooster",
-    "short_name": "bcpbooster",
+    "name": "BCP Booster Club",
+    "short_name": "BCP Booster",
     "start_url": ".",
     "display": "minimal-ui",
     "background_color": "#0175C2",
