--- a/web/manifest.json
+++ b/web/manifest.json
@@ -10,14 +10,10 @@
     "prefer_related_applications": false,
     "icons": [
         {
-            "src": "icons/Icon-192.png",
+            "src": "\/android-icon-192x192.png",
             "sizes": "192x192",
-            "type": "image/png"
-        },
-        {
-            "src": "icons/Icon-512.png",
-            "sizes": "512x512",
-            "type": "image/png"
+            "type": "image\/png",
+            "density": "4.0"
         }
     ]
 }
