--- a/web/manifest.json
+++ b/web/manifest.json
@@ -10,9 +10,9 @@
     "prefer_related_applications": false,
     "icons": [
         {
-            "src": "\/android-icon-192x192.png",
+            "src": "icons/android-icon-192x192.png",
             "sizes": "192x192",
-            "type": "image\/png",
+            "type": "image/png",
             "density": "4.0"
         }
     ]
