--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   google_sign_in: ^4.1.1
   http: ^0.12.0+4
   modal_progress_hud: ^0.1.3
+  url_launcher: ^5.4.10
 
 dev_dependencies:
   flutter_test:
