--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,8 @@ dependencies:
 
   date_format: ^1.0.8
   email_validator: ^1.0.4
+  firebase_analytics: ^5.0.16
+  firebase_core: ^0.4.5
   flutter_auth_buttons: ^0.6.0
   google_sign_in: ^4.1.1
   http: ^0.12.0+4
