--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   firebase_analytics: ^5.0.16
   firebase_core: ^0.4.5
   flutter_auth_buttons: ^0.6.0
+  google_fonts: ^1.1.2
   google_sign_in: ^4.1.1
   http: ^0.12.0+4
   modal_progress_hud: ^0.1.3
