--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,7 +21,7 @@ dependencies:
   email_validator: ^1.0.4
   firebase_analytics: ^5.0.16
   firebase_core: ^0.4.5
-  flutter_auth_buttons: ^0.6.0
+  flutter_signin_button: ^2.0.0
   google_fonts: ^1.1.2
   google_sign_in: ^4.1.1
   http: ^0.12.0+4
