--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,24 +9,22 @@ publish_to: 'none'
 version: 1.0.0+6
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
 
-  cupertino_icons: ^0.1.2
-
-  date_format: ^1.0.8
-  email_validator: ^1.0.4
-  firebase_analytics: ^5.0.16
-  firebase_core: ^0.4.5
+  date_format: ^2.0.6
+  email_validator: ^2.0.1
+  firebase_analytics: ^9.1.9
+  firebase_core: ^1.17.1
   flutter_signin_button: ^2.0.0
-  google_fonts: ^1.1.2
-  google_sign_in: ^4.1.1
-  http: ^0.12.0+4
-  modal_progress_hud: ^0.1.3
-  url_launcher: ^5.4.10
+  google_fonts: ^3.0.1
+  google_sign_in: ^5.3.2
+  http: ^0.13.4
+  modal_progress_hud_nsn: ^0.2.1
+  url_launcher: ^6.1.2
 
 dev_dependencies:
   flutter_test:
